Fix aff pattern doesn't contains ETR.